app/styles/main.css
/* ... */
body {
  font-family: "Lato";
  font-weight: 300;
  font-size: 16px;
  color: #555;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
}
.col-md-4 {
  padding-bottom: 20px;
}
.row {
  margin-right: 0px;
  margin-left: -15px;
}
.modal-header {
  background: #3498db;
}
.modal-header h4 {
  color: white;
}
.modal-footer {
  background: #2b2b2b;
}
.navbar {
  /*  background-color: rgba(218,218,218,0.8);*/
  background-color: #2b2b2b;
  padding: 10px 0;
  font-weight: 600;
}
/*.navbar > .container {
  padding: 20px 0;
}*/

.navbar-default {
  border-color: transparent;
  background-color: rgba(218, 218, 218, 0.2);
}
.navbar-toggle {
  border-color: transparent;
  border: 0px solid transparent;
}
.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
  background-color: #16a085;
  color: white;
}
hr {
  position: relative;
  border: none;
}
hr:before {
  content: " ";
  position: absolute;
  top: 0;
  left: 25%;
  width: 50%;
  height: 2px;
  background: #ccc;
}
a images {
  background: white;
}
.odd a images {
  background: #f5f5f5;
}
/* Titles */

h1, h2, h3, h4, h5, h6 {
  font-family: "Raleway";
  font-weight: 300;
  color: #333;
}
/* Paragraph & Typographic */

p {
  line-height: 28px;
  margin-bottom: 25px;
}
.centered {
  text-align: center;
}
.paragraph-lead {
  font-size: 20px;
  color: #3498db;
}
strong {
  font-weight: 700;
}
em {
  font-weight: 300;
}
pre {
  background: #ebebeb;
  border: none;
  font-family: "Monaco";
  font-size: 16px;
  color: #666;
  padding: 20px;
  line-height: 28px;
}
small {
  font-size: 12px;
}
blockquote, blockquote p {
  line-height: 28px;
  color: #999;
  font-weight: 300;
  font-style: italic;
}
blockquote {
  position: relative;
  margin: 0 0 40px -30px;
  padding-left: 30px;
  border-left: 5px solid #3498db;
}
blockquote cite {
  position: absolute;
  bottom: -25px;
  right: 0;
  font-size: 12px;
  font-style: italic;
  color: #333;
  font-weight: 300;
}
blockquote cite:before {
  content: "-- "
}
/* Images */

.overflow-image {
  margin-top: -65px;
}
/* Links */

a {
  /*color: #3498db;*/
  color: #eee;
  word-wrap: break-word;
  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
  transition: color 0.1s ease-in, background 0.1s ease-in;
}
a:hover, a:focus {
  /*    color: #c0392b;*/
  text-decoration: none;
  outline: 0;
}
a:before, a:after {
  -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
  -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
  -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
  -o-transition: color 0.1s ease-in, background 0.1s ease-in;
  transition: color 0.1s ease-in, background 0.1s ease-in;
}
/* ==========================================================================
   Wrap Sections
   ========================================================================== */

#headerwrap {
  background: url(../images/header_bg.gif) no-repeat center top;
  margin-top: -50px;
  padding-top: 120px;
  text-align: center;
  background-attachment: relative;
  background-position: center center;
  min-height: 650px;
  width: 100%;
  -webkit-background-size: 100%;
  -moz-background-size: 100%;
  -o-background-size: 100%;
  background-size: 100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
#headerwrap h1 {
  color: #ffffff;
  margin-top: 90px;
  padding-bottom: 30px;
  font-size: 100px;
  text-shadow: 2px 2px 2px #000;
}
#headerwrap p {
  color: #ffffff;
  font-size: 40px;
  font-weight: 400;
  text-align: center;
  line-height: 40px;
  letter-spacing: 3px;
  margin-left: 15px;
  text-shadow: 1px 1px 1px #000;
}
.greywrap {
  background: #f5f5f5;
  margin-top: 0px;
  padding-top: 40px;
  border-bottom: 1px solid #ddd;
  text-align: center;
}
.greywrap .callout {
  margin-bottom: 20px;
}
.greywrap p {
  margin-left: 30px;
  margin-right: 30px;
  letter-spacing: 1px;
  padding-top: 15px;
  padding-bottom: 15px;
}
.greywrap .icon {
  font-size: 60px;
  line-height: 30px;
  margin-bottom: 10px;
}
#footerwrap {
  background: #2b2b2b;
  margin-top: 0px;
  padding-top: 40px;
  padding-bottom: 20px;
  border-bottom: 1px solid #ddd;
  text-align: center;
}
#footerwrap h4, .icon {
  color: white;
}
#footerwrap .icon {
  margin-left: 10px;
}
/* ABOUT PAGE */
#contact .icon {
  color: #000;
  margin-right: 15px;
}

#careers {
  width: 100%;
  display: block;
  overflow: hidden;
  position: relative;
  background: #ccc;
}
.about-top {
  padding-top: 4em;
}
p.more {
  text-align: center;
  clear: both;
  font-size: 1.35em;
  text-shadow: 2px 2px #000;
}
p.more a {
  font-weight: 400;
  display: inline-block;
  background: #ffba00;
  height: 70px;
  width: 350px;
  color: #FFF;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: background 0.5s ease-in;
  -moz-transition: background 0.5s ease-in;
  -o-transition: background 0.5s ease-in;
  -ms-transition: background 0.5s ease-in;
  transition: background 0.5s ease-in;
}
p.more a span {
  width: 100%;
  text-shadow: 0 0 0 #FFF;
  line-height: 3.2em;
  letter-spacing: 0.1em;
}
p.more a:hover {
  background: #f89600
}

/* PROJECTS PAGE */

#project-page {
    background-color: #ccc;

}
.masonry-brick {
    margin: 0 auto;
    max-width: 40%;
}
.masonry-brick images {
    width: 100%;
}

/* ==========================================================================
   Box Sections
   ========================================================================== */

.latest-news {
  text-align: center;
}
.latest-news > images {
  width: 100%;
}
.white h1 {
  padding-top: 35px;
}
.white p {
  padding-top: 25px;
}
/* ... */

